invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_46.src
.IPPcode24
EQ LF@a int@49